tests/neg/override-scala2-macro.scala
class Foo extends StringContext {
  override inline def f[A >: Any](args: A*): String = ??? // error
}
